# playkit-android-vr

./: .gitignore  .travis.yml  README.md  build.gradle  gradle.properties  gradlew.bat  settings.gradle  travis-push-to-bintray.sh
.github/: publish.sh  release_notes.sh
app/: build.gradle
app/src/androidTest/java/com/kaltura/playkitvrdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/kaltura/playkitvrdemo/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
playkitvr/: CMakeLists.txt  build.gradle  gradle-mvn-push.gradle  gradle.properties  version.gradle
playkitvr/app/: build.gradle
playkitvr/app/src/androidTest/java/com/kaltura/playkit/playkitvr/playkitvr/: ExampleInstrumentedTest.java
playkitvr/app/src/main/: AndroidManifest.xml
playkitvr/app/src/main/java/com/kaltura/playkit/playkitvr/playkitvr/: MainActivity.java
playkitvr/app/src/main/res/layout/: activity_main.xml
playkitvr/app/src/test/java/com/kaltura/playkit/playkitvr/playkitvr/: ExampleUnitTest.java
playkitvr/gradle/wrapper/: gradle-wrapper.properties
playkitvr/src/androidTest/java/com/kaltura/playkitvr/: ExampleInstrumentedTest.java
playkitvr/src/main/: AndroidManifest.xml
playkitvr/src/main/java/com/kaltura/playkitvr/: CustomProjectionFactory.java  DefaultVRPlayerEngine.java  DefaultVRPlayerFactory.java  DefaultVRPlayerWrapper.java  VRController.java  VRControllerImpl.java  VRPlayerState.java  VRSurfaceView.java  VRUtil.java  VRView.java
playkitvr/src/test/java/com/kaltura/playkitvr/: ExampleUnitTest.java
playkitvrdemo/app/: build.gradle
playkitvrdemo/app/src/main/: AndroidManifest.xml
playkitvrdemo/app/src/main/res/layout/: activity_main.xml
playkitvrdemo/gradle/wrapper/: gradle-wrapper.properties
(+7 files in other folders)
